# MSPM0L1306-BASIC-RUST-CONFIG

./: Cargo.toml  Embed.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
OpenOCD/: ti_mspm0l1306_2.cfg
examples/: gpio  pwm  switches  systick
src/: main.rs
