[package]
authors = ["Team27"]
edition = "2018"
readme = "README.md"
name = "MSPM0L1306-BASE-CONFIG"
version = "0.1.0"



[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.6.10"
mspm0l130x = { version = "0.1.3", features = ["rt"]}
panic-halt = "0.2.0"
MSPM0L1306-HAL = "0.1.3"




# this lets you use `cargo fix`!
[[bin]]
name = "MSPM0L1306-BASE-CONFIG"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
